Add live update
